<?xml version="1.0"?>
<package>
  <name>aria_ros</name>
  <version>0.0.0</version>
  <description>ROS wrapper for ARIA robot interface</description>

  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/aria_ros</url>
  <url type="repository">http://github.com/skasperski/drivers</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
